--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
                     <div class="image" id="product-10"></div>
                     <br>
-                    <h5>JoySpoon Signature Gift Box</h5>
+                    <h5>JoySpoon Signature G...</h5>
                     <div class="prices">
                         <p>₹. 870.30 </p>
                         <p2>₹. 967.00</p2>
@@ -479,7 +479,7 @@
                         <p>₹. 799.10</p>
                     </div>
 
-                    <div class="review">
+                    <!-- <div class="review">
                         <div class="stars">
                             <i class="fa-solid fa-star fa-xs"
                                 style="color: #c05a4b;  vertical-align: middle; line-height: 19px;"></i>
@@ -493,7 +493,7 @@
                                 style="color: #c05a4b;  vertical-align: middle; line-height: 19px;"></i>
                         </div>
                         <p3> 9 reviews</p>
-                    </div>
+                    </div> -->
 
                     <button>+ Add to cart</button>
 
