--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
                     <div class="image" id="product-6"></div>
                     <br>
-                    <h5>Mukhwas Sachet Box - Pack of 2</h5>
+                    <h5>Mukhwas Sachet Box - Pack...</h5>
                     <div class="prices">
                         <p>₹. 251.00 </p>
                         <p2>₹. 279.00</p2>
